Bug 138581 - Gradient preview in area dialog shows artifacts (Skia related)
Summary: Gradient preview in area dialog shows artifacts (Skia related)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-11-30 19:43 UTC by Telesto
Modified: 2020-12-01 15:33 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screenshot (31.57 KB, image/jpeg)
2020-11-30 19:43 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-11-30 19:43:20 UTC
Description:
Gradient preview in area dialog shows artifacts (Skia related)

Steps to Reproduce:
1. Open Writer
2. Format -> Page Style
3. Area tab -> Gradient -> Deep Ocean  (shows circles 

Actual Results:
See screenshot

Expected Results:
Not so


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 32fdb8eb3506bc8dcf013cc713fe8e5debceb940
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-11-30 19:43:32 UTC
Created attachment 167694 [details]
Screenshot
Comment 2 Commit Notification 2020-12-01 15:29:44 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8601eca3c8573b433933ab59180624d798c6189e

do not unnecessarily explicitly force gradient step count (tdf#138581)

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.