do not unnecessarily explicitly force gradient step count (tdf#138581)

Toolkits usually do not provide the ability to specify gradient steps,
which means VCL falls back to its algorithm, which at least with Skia
sometimes causes poor results.

Change-Id: I35dbf87e77d5ed36d8f257db877135a2a0be2ffe