sw/source/uibase/docvw/ShadowOverlayObject.cxx
@@ -90,8 +90,7 @@ void ShadowPrimitive::create2DDecomposition(
                 0.5,
                 F_PI,
                 basegfx::BColor(230.0/255.0,230.0/255.0,230.0/255.0),
-                basegfx::BColor(180.0/255.0,180.0/255.0,180.0/255.0),
-                2);
+                basegfx::BColor(180.0/255.0,180.0/255.0,180.0/255.0));
 
             rContainer.push_back(
                 new drawinglayer::primitive2d::FillGradientPrimitive2D(
@@ -109,8 +108,7 @@ void ShadowPrimitive::create2DDecomposition(
                 0.5,
                 F_PI,
                 basegfx::BColor(230.0/255.0,230.0/255.0,230.0/255.0),
-                basegfx::BColor(180.0/255.0,180.0/255.0,180.0/255.0),
-                4);
+                basegfx::BColor(180.0/255.0,180.0/255.0,180.0/255.0));
 
             rContainer.push_back(
                 new drawinglayer::primitive2d::FillGradientPrimitive2D(
@@ -128,8 +126,7 @@ void ShadowPrimitive::create2DDecomposition(
                 0.5,
                 F_PI,
                 basegfx::BColor(230.0/255.0,230.0/255.0,230.0/255.0),
-                basegfx::BColor(83.0/255.0,83.0/255.0,83.0/255.0),
-                4);
+                basegfx::BColor(83.0/255.0,83.0/255.0,83.0/255.0));
 
             rContainer.push_back(
                 new drawinglayer::primitive2d::FillGradientPrimitive2D(
